# WeChatBot

./: .gitignore  README.md  config.example.json  pyproject.toml  requirements.txt
data/distilled/: wechat_style_notes.md
scripts/: export_wechat_chats.py
skills/wechat-tt-customer-service/: SKILL.md
src/wechat_customer_bot/: app.py  capture.py  config.py  dedupe.py  events.py  http_client.py  log.py  reply.py  sender.py  vision_ocr.py  windows.py
